# multi-modal-early-exit

./: README.md  pyproject.toml
EE/: IC_only.py  README.md  analysis.py  configs.py  eval.py  full_test.sh  generic_scaling.py  large_scale.py  metrics.py  plots.py  policy.py  thresh.py  train_full_dataset.sh  utils.py
EE/data/: RVL_CDIP.py  __init__.py
EE/models/: EELayoutLM_exit_named_parameters-wotherexits.json  EE_modules.py  LayoutLMv3.py  Pix2Struct.py
